<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- preference -->
    <string name="pref_host" translatable="false">host</string>
    <string name="pref_host_port" translatable="false">host_port</string>
    <string name="pref_host_protocol" translatable="false">host_protocal</string>
    <string name="pref_dark_theme" translatable="false">dark_theme</string>
    <string name="pref_about" translatable="false">about</string>

    <!-- Resources that do not require translation -->
    <string name="app_name" translatable="false">Orange TV</string>

    <!-- Translatable resources -->
    <string name="menu_filter_by_grow_zone" translation_description="The label for the menu item to filter the displayed plants by grow zone.">Filter by grow zone</string>
    <string name="plant_detail_image_content_description" translation_description="Content description for the header / hero image that is show at the top of the plant detail screen.">Image of plant</string>
    <string name="my_garden_title" translation_description="Title for the 'My garden' screen where the user can see the list of plants that have been added to their garden.">My garden</string>
    <string name="plant_list_title" translation_description="Title for the plant list screen where the user can see a list of plants available to add to their garden.">Plant list</string>
    <string name="available" translation_description="Text for the header of the plant list page indicating the available plants for users to choose from.">Available Plants</string>
    <string name="plant_details_title" translation_description="Title for the plant details screen where the user can see the details for a specific plant.">Plant details</string>
    <string name="add_plant" translation_description="Button text that prompts user to navigate to the Plant List to add plants to their empty garden.">Add plant</string>
    <string name="added_plant_to_garden" translation_description="Confirmation text that is shown when a user adds a plant to their empty garden.">Added plant to garden</string>
    <string name="garden_empty" translation_description="Text that is shown on the 'My Garden' screen when no plants have been added to the user's garden">Your garden is empty</string>
    <string name="plant_date_header" translation_description="Text that is shown on each plant on the 'My Garden' screen which says the word Planted to show date of planting below">Planted</string>
    <string name="watered_date_header" translation_description="Text that is shown on each plant on the 'My Garden' screen which says the word Last Watered to show date of last watering below">Last Watered</string>
    <string name="menu_item_share_plant" translation_description="The label for the Share menu item">Share</string>
    <string name="share_text_plant" translation_description="The default messaged used when sharing a plant on SNS, etc.">Check out the %s plant in the Android Sunflower app</string>

    <!-- String plurals and their related prefix / suffix strings -->
    <string name="watering_needs_prefix" translation_description="Prefix for the text describing how often a plant should be watered. Used in combination with watering_needs_suffix.">Watering needs</string>
    <plurals name="watering_needs_suffix">
        <item quantity="one" translation_description="Suffix for the text describing how often a plant should be watered, singular. Used in combination with watering_needs_prefix: 'Watering needs: every day'.">every day</item>
        <item quantity="other" translation_description="Suffix for the text describing how often a plant should be watered, plural. Used in combination with watering_needs_prefix: 'Watering needs: every 8 days'.">every %d days</item>
    </plurals>

    <plurals name="watering_next">
        <item quantity="one" translation_description="Text indicating when the the plant should next be watered, singular. Used in conjunction with last watered date. 'May 24, 2018 - water tomorrow.'.">water tomorrow.</item>
        <item quantity="other" translation_description="Text indicating when the the plant should next be watered, plural. Used in conjunction with last watered date. 'May 24, 2018 - water in 8 days.'.">water in %d days.</item>
    </plurals>

    <!-- Accessibility -->
    <string name="a11y_plant_item_image" translation_description="Accessibility text for each of the plant images shown in the 'My garden' and 'Plant list' screens.">Picture of plant</string>

    <string name="select_an_avatar">Select an Avatar</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">sign up</string>
    <string name="profile_name_1">Ali Connors</string>
    <string name="profile_image">Profile image</string>
    <string name="user_points">10,000 pts</string>
    <string name="user_rank">#1</string>
    <string name="rank_1">#1</string>
    <string name="wins_amount">42</string>
    <string name="losses_amount">03</string>
    <string name="about">About</string>
    <string name="welcome">Orange TV</string>
    <string name="about_description">This sample showcases navigation using a Bottom Navigation
    View. The state and back stack of the three different screens are persisted.
    </string>
    <string name="done">Done</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_register">Register</string>
    <string name="title_registered">Registered</string>
    <string name="title_list">Leaderboard</string>
    <string name="title_detail">Profile</string>
    <string name="cd_home">Home</string>
    <string name="cd_list">List</string>
    <string name="cd_form">Form</string>

    <string name="track_selection_title">Select tracks</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="error_cleartext_not_permitted">Cleartext traffic not permitted</string>
    <string name="error_generic">Playback failed</string>
    <string name="error_unrecognized_abr_algorithm">Unrecognized ABR algorithm</string>
    <string name="error_unrecognized_stereo_mode">Unrecognized stereo mode</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>
    <string name="download_start_error">Failed to start download</string>
    <string name="download_playlist_unsupported">This demo app does not support downloading playlists</string>
    <string name="download_drm_unsupported">This demo app does not support downloading protected content</string>
    <string name="download_scheme_unsupported">This demo app only supports downloading http streams</string>
    <string name="download_ads_unsupported">IMA does not support offline ads</string>
    <string name="prefer_extension_decoders">Prefer extension decoders</string>
    <string name="random_abr">Enable random ABR</string>

    <string name="login">login</string>
    <string name="title_longin">login</string>
    <string name="setting">setting</string>
    <string name="return_to_profile">return to profile</string>
    <string name="user_login">User Login</string>
    <string name="network">Network</string>
    <string name="host_summary">host ip address</string>
    <string name="setting_ui">UI</string>
    <string name="port_number">port Number</string>
    <string name="host_protocol">host protocal</string>
    <string name="title_account">account</string>
    <string name="title_info">Info</string>
    <string name="play_list">play list</string>
    <string name="favours">favours</string>
    <string name="dark_theme">eable dark theme</string>
    <string name="info_overview">overview</string>
    <string name="info_detail">detail</string>
    <string name="about_us">about us</string>
    <string name="host">host</string>

    <string-array name="host_protocols">
        <item>http</item>
        <item>https</item>
    </string-array>

    <string-array name="about_info">
        <item>Author : NightCat</item>
        <item>Email : angryestbird@sina.com</item>
        <item>Motto : never admit being defeated</item>
    </string-array>

    <string name="nick_name">Nickname:</string>
    <string name="profile_email">Email:</string>
    <string name="motto">Motto:</string>

    <string name="network_unavailable">network is unavailable</string>

</resources>
