<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        tools:context="com.google.samples.apps.sunflower.MainActivity"
        tools:layout_editor_absoluteY="81dp">

        <TextView
            android:id="@+id/avatar_text_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="16dp"
            android:text="@string/user_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="34dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/avatar_5_raster"
            android:contentDescription="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/email_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_text_label"
            app:srcCompat="@drawable/circle"
            tools:background="@tools:sample/avatars" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/password_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="34dp"
            android:autofillHints="@string/password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text" />

        <Button
            android:id="@+id/login_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="146dp"
            android:layout_height="48dp"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="95dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/sign_up"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/signup_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text" />

        <Button
            android:id="@+id/signup_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/sign_up"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

