<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form"
    app:startDestination="@id/userProfile">

    <fragment
        android:id="@+id/userProfile"
        android:name="com.google.samples.apps.sunflower.userscreen.UserProfile"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_user_profile">
        <deepLink
            android:id="@+id/deepLink"
            android:autoVerify="true"
            app:uri="www.example.com/user/{userName}" />
        <argument
            android:name="userName"
            app:argType="string" />
        <action
            android:id="@+id/action_userProfile_to_login"
            app:destination="@id/login" />
        <action
            android:id="@+id/action_userProfile_to_setting"
            app:destination="@id/setting" />
    </fragment>
    <fragment
        android:id="@+id/login"
        android:name="com.google.samples.apps.sunflower.userscreen.Login"
        android:label="@string/title_longin"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/register" />
    </fragment>
    <fragment
        android:id="@+id/register"
        android:name="com.google.samples.apps.sunflower.userscreen.Register"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_registered"
            app:destination="@id/registered" />
    </fragment>
    <fragment
        android:id="@+id/registered"
        android:name="com.google.samples.apps.sunflower.userscreen.Registered"
        android:label="Registered"
        tools:layout="@layout/fragment_registered">
        <action
            android:id="@+id/action_registered_to_userProfile"
            app:destination="@id/userProfile" />
    </fragment>
    <fragment
        android:id="@+id/setting"
        android:name="com.google.samples.apps.sunflower.userscreen.MySettings"
        android:label="Setting" />
</navigation>
